discussion/kv_engine/153272/153272_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: error: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

The trickiest part here is getting the logger to accept both calls
with format strings and variable args (like the example above), and
plain, single argument fixed string - e.g.

    EP_LOG_DEBUG("Something interesting happened");

This is because "Something interesting happened" isn't considered to
be a valid formatting string by fmtlib, and hence will trigger a
compile-time error if you attempt to verify it as such. Therefore it
is necessary to use the preprocessor to pass through such messages
without applying the FMT_STRING() macro to them.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-27 14:58:38.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 15:20:04.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36145/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(1584): fatal error C1088: Cannot flush compiler intermediate file: "C:\Users\Administrator\AppData\Local\Temp\_CL_c28f7376ex": No space left on device ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36145/ )

Compile error at    fmt/format.h:2873:27:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36145/ )

Link error: fatal error LNK1180: insufficient disk space to complete link ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36145/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30868/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10787/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9855/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10931/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11191/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18755/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 15:43:10.000000000
Message: 
Patch Set 5:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9226/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36146/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\access_scanner.cc(58): error C3861: "EP_LOG_FMT": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36146/ )

Compile error at    fmt/format.h:2873:27:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36146/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30868/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10787/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9855/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10931/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11191/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18755/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
